--- a/ReportUnit/packages.config
+++ b/ReportUnit/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Costura.Fody" version="1.3.3.0" targetFramework="net40" developmentDependency="true" />
+  <package id="Fody" version="1.29.4" targetFramework="net40" developmentDependency="true" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" />
   <package id="RazorEngine" version="3.7.3" targetFramework="net40" />
+  <package id="Virtuosity.Fody" version="1.19.11.0" targetFramework="net40" developmentDependency="true" />
 </packages>
